[tool.poetry]
name = "aiokea"
version = "0.1.4a"
description = ""
authors = ["francojposa <franco@francoposa.io>"]
repository = "https://github.com/francojposa/aiokea"

[tool.poetry.dependencies]
python = ">=3.6"
aiohttp = "^3.*"
aiopg = "^1.*"
sqlalchemy = "1.*"
marshmallow = "3.*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pytest-cov = "^*"
alembic = "^1.*"
pytest-aiohttp = "*"
ipython = "*"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
